--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -65,7 +65,7 @@
 }
 
 .stars {
-  background:#000 url(https://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
+  background:#000 url(https://github.com/LeonardHawkes/leonardhawkes.github.io/blob/main/images/stars.png) repeat top center;
   z-index:0;
 }
 
